jviz-btn.html: minor changes

--- a/jviz-btn.html
+++ b/jviz-btn.html
@@ -49,15 +49,15 @@ The Jviz Project is under the MIT License. See https://github.com/jviz/jviz/blob
 <script>
 
 //Button component
-jviz.components.btn = { is: 'jviz-btn' };
+var jviz_btn = { is: 'jviz-btn' };
 
 //Button properties
-jviz.components.btn.properties = {};
-jviz.components.btn.properties.btnColor = { type: String, value: 'blue', reflectToAttribute: true, observer: 'update_color' };
-jviz.components.btn.properties.btnDisabled = { type: Boolean, value: false, reflectToAttribute: true, observer: 'update_disabled' };
+jviz_btn.properties = {};
+jviz_btn.properties.btnColor = { type: String, value: 'blue', reflectToAttribute: true, observer: 'update_color' };
+jviz_btn.properties.btnDisabled = { type: Boolean, value: false, reflectToAttribute: true, observer: 'update_disabled' };
 
 //Update the button color
-jviz.components.btn.update_color = function(new_value, old_value)
+jviz_btn.update_color = function(new_value, old_value)
 {
   //Update the button background color
   this.customStyle['--jviz-btn-color-background'] = 'var(--jviz-' + new_value + ')';
@@ -70,27 +70,27 @@ jviz.components.btn.update_color = function(new_value, old_value)
 };
 
 //Set the color value
-jviz.components.btn.set_color = function(value)
+jviz_btn.set_color = function(value)
 {
   //Update the button color
   this.btnColor = value;
 };
 
 //Get the button color
-jviz.components.btn.get_color = function()
+jviz_btn.get_color = function()
 {
   //Return the color
   return this.btnColor;
 };
 
 //Update the disabled button
-jviz.components.btn.update_disabled = function(new_value, old_value)
+jviz_btn.update_disabled = function(new_value, old_value)
 {
   //Button dis disabed/enabled
 };
 
 //Set disabled
-jviz.components.btn.set_disabled = function(value)
+jviz_btn.set_disabled = function(value)
 {
   //Check for boolean
   if(typeof value !== 'boolean'){ return; }
@@ -100,13 +100,14 @@ jviz.components.btn.set_disabled = function(value)
 };
 
 //Check if button is disabled
-jviz.components.btn.get_disabled = function()
+jviz_btn.get_disabled = function()
 {
   //Return if is disabled
   return this.btnDisabled;
 };
 
+//Register the button element
+Polymer(jviz_btn);
+
 </script>
 
-<!-- Initialize the element -->
-<script> Polymer(jviz.components.btn); </script>
