--- a/jviz-btn.html
+++ b/jviz-btn.html
@@ -40,8 +40,8 @@ The Jviz Project is under the MIT License. See https://github.com/jviz/jviz/blob
       :host[btn-disabled]{ @apply(--jviz-btn-disabled); }
       
     </style>
-    <!-- Template content -->
-    <content></content>
+    <!-- Button text -->
+    {{ text }}
   </template>
 </dom-module>
 
@@ -54,7 +54,8 @@ var jviz_btn = { is: 'jviz-btn' };
 //Button properties
 jviz_btn.properties = {};
 jviz_btn.properties.color = { type: String, value: 'blue', reflectToAttribute: true, observer: '_update_color' };
-jviz_btn.properties.disabled = { type: Boolean, value: false, reflectToAttribute: true, observer: '_update_disabled' };
+jviz_btn.properties.disabled = { type: Boolean, value: false, reflectToAttribute: true };
+jviz_btn.properties.text = { type: String, reflectToAttribute: true };
 
 //Update the button color
 jviz_btn._update_color = function(value)
@@ -67,12 +68,6 @@ jviz_btn._update_color = function(value)
 
   //Update the styles
   this.updateStyles();
-};
-
-//Update the disabled button
-jviz_btn._update_disabled = function(value)
-{
-  //Button dis disabed/enabled
 };
 
 //Register the button element
