--- a/jviz-btn.html
+++ b/jviz-btn.html
@@ -37,7 +37,7 @@ The Jviz Project is under the MIT License. See https://github.com/jviz/jviz/blob
       :host:hover { @apply(--jviz-btn-hover); }
 
       /* Button disabled */
-      :host[btn-disabled]{ @apply(--jviz-btn-disabled); }
+      :host[disabled]{ @apply(--jviz-btn-disabled); }
       
     </style>
     <!-- Button text -->
