jviz-btn.html: added width property. Updated element variables names

--- a/jviz-btn.html
+++ b/jviz-btn.html
@@ -12,25 +12,20 @@ The Jviz Project is under the MIT License. See https://github.com/jviz/jviz/blob
 <!-- Component -->
 <dom-module id="jviz-btn">
   <template>
-    <!-- Template style -->
     <style>
-
-      /* Button variables */
       :host
       {
-        /* Button color */
-        --jviz-btn-color-background: var(--jviz-blue);
-
-        /* Button text */
-        --jviz-btn-color-text: var(--jviz-blue-over);
+        --jviz-btn---color-background: var(--jviz-blue);
+        --jviz-btn---color-text: var(--jviz-blue-over);
+        --jviz-btn---width: 0px;
       }
 
       /* Default button style */
       :host
       {
         @apply(--jviz-btn);
-        background-color: var(--jviz-btn-color-background);
-        color: var(--jviz-btn-color-text);
+        background-color: var(--jviz-btn---color-background);
+        color: var(--jviz-btn---color-text);
       }
 
       /* Button hover */
@@ -38,7 +33,12 @@ The Jviz Project is under the MIT License. See https://github.com/jviz/jviz/blob
 
       /* Button disabled */
       :host[disabled]{ @apply(--jviz-btn-disabled); }
-      
+
+      /* Button with width */
+      :host[width]
+      {
+        width: calc(var(--jviz-btn---width) - var(--jviz-btn--padding));
+      }
     </style>
     <!-- Button text -->
     {{ text }}
@@ -53,18 +53,29 @@ var jviz_btn = { is: 'jviz-btn' };
 
 //Button properties
 jviz_btn.properties = {};
+jviz_btn.properties.width = { type: String, reflectToAttribute: true, observer: '_update_width' };
 jviz_btn.properties.color = { type: String, value: 'blue', reflectToAttribute: true, observer: '_update_color' };
 jviz_btn.properties.disabled = { type: Boolean, value: false, reflectToAttribute: true };
 jviz_btn.properties.text = { type: String, reflectToAttribute: true };
+
+//Update the button width
+jviz_btn._update_width = function(value)
+{
+  //Update the button width
+  this.customStyle['--jviz-btn---width'] = value;
+
+  //Update the styles
+  this.updateStyles();
+};
 
 //Update the button color
 jviz_btn._update_color = function(value)
 {
   //Update the button background color
-  this.customStyle['--jviz-btn-color-background'] = 'var(--jviz-' + value + ')';
+  this.customStyle['--jviz-btn---color-background'] = 'var(--jviz-' + value + ')';
 
   //Update the button text color
-  this.customStyle['--jviz-btn-color-text'] = 'var(--jviz-' + value + '-over)';
+  this.customStyle['--jviz-btn---color-text'] = 'var(--jviz-' + value + '-over)';
 
   //Update the styles
   this.updateStyles();
