--- a/jviz-btn-icon.html
+++ b/jviz-btn-icon.html
@@ -13,25 +13,20 @@ The Jviz Project is under the MIT License. See https://github.com/jviz/jviz/blob
 <!-- Component -->
 <dom-module id="jviz-btn-icon">
   <template>
-    <!-- Template style -->
     <style>
-
-      /* Button variables */
       :host
       {
-        /* Button color */
-        --jviz-btn-icon-color-background: var(--jviz-blue);
-
-        /* Button text */
-        --jviz-btn-icon-color-text: var(--jviz-blue-over);
+        --jviz-btn-icon---color-background: var(--jviz-blue);
+        --jviz-btn-icon---color-text: var(--jviz-blue-over);
+        --jviz-btn-icon---width: 0px;
       }
 
       /* Default button style */
       :host
       {
         @apply(--jviz-btn);
-        background-color: var(--jviz-btn-icon-color-background);
-        color: var(--jviz-btn-icon-color-text);
+        background-color: var(--jviz-btn-icon---color-background);
+        color: var(--jviz-btn-icon---color-text);
         padding: 0px !important;
       }
 
@@ -41,9 +36,16 @@ The Jviz Project is under the MIT License. See https://github.com/jviz/jviz/blob
       /* Button disabled */
       :host[disabled]{ @apply(--jviz-btn-disabled); }
 
+      /* Button icon */
+      :host .btn-icon
+      {
+        float: left;
+      }
+
       /* Button text */
       :host .btn-text
       {
+        width: calc(100% - 45px);
         height: 30px;
         display: inline-block;
         padding-right: 10px;
@@ -52,9 +54,14 @@ The Jviz Project is under the MIT License. See https://github.com/jviz/jviz/blob
         float: right;
       }
 
+      /* Button with width */
+      :host[width]
+      {
+        width: calc(var(--jviz-btn-icon---width) - var(--jviz-btn--padding));
+      }
     </style>
     <!-- Button icon -->
-    <jviz-icons icon$="{{ icon }}" color$="{{ color }}" size="30px" reflect></jviz-icons>
+    <jviz-icons class="btn-icon" icon$="{{ icon }}" color$="{{ color }}" size="30px" reflect></jviz-icons>
     <!-- Button text -->
     <template is="dom-if" if="{{ text }}">
       <div class="btn-text">{{ text }}</div>
@@ -64,25 +71,35 @@ The Jviz Project is under the MIT License. See https://github.com/jviz/jviz/blob
 
 <!-- Button logic -->
 <script>
-
   //Button component
   var jviz_btn_icon = { is: 'jviz-btn-icon' };
 
   //Button properties
   jviz_btn_icon.properties = {};
+  jviz_btn_icon.properties.width = { type: String, reflectToAttribute: true, observer: '_update_width' };
   jviz_btn_icon.properties.color = { type: String, value: 'blue', reflectToAttribute: true, observer: '_update_color' };
   jviz_btn_icon.properties.disabled = { type: Boolean, value: false, reflectToAttribute: true };
   jviz_btn_icon.properties.text = { type: String, reflectToAttribute: true };
   jviz_btn_icon.icon = { type: String, reflectToAttribute: true };
 
+  //Update the button width
+  jviz_btn_icon._update_width = function(value)
+  {
+    //Update the button width
+    this.customStyle['--jviz-btn-icon---width'] = value;
+
+    //Update the styles
+    this.updateStyles();
+  };
+
   //Update the button color
   jviz_btn_icon._update_color = function(value)
   {
     //Update the button background color
-    this.customStyle['--jviz-btn-icon-color-background'] = 'var(--jviz-' + value + ')';
+    this.customStyle['--jviz-btn-icon---color-background'] = 'var(--jviz-' + value + ')';
 
     //Update the button text color
-    this.customStyle['--jviz-btn-icon-color-text'] = 'var(--jviz-' + value + '-over)';
+    this.customStyle['--jviz-btn-icon---color-text'] = 'var(--jviz-' + value + '-over)';
 
     //Update the styles
     this.updateStyles();
@@ -90,5 +107,4 @@ The Jviz Project is under the MIT License. See https://github.com/jviz/jviz/blob
 
   //Register the button element
   Polymer(jviz_btn_icon);
-
 </script>
