demo/btn-icon.html: added button icon with width property

--- a/demo/btn-icon.html
+++ b/demo/btn-icon.html
@@ -6,3 +6,6 @@
 
 <!-- Test -->
 <jviz-btn-icon id="test" color="pink" icon="search" text="This is my button with an icon"></jviz-btn-icon>
+
+<!-- Big button icon test -->
+<jviz-btn-icon id="test" color="pink" icon="search" text="This is my button" width="500px"></jviz-btn-icon>
