demo/btn.html: added button with width property

--- a/demo/btn.html
+++ b/demo/btn.html
@@ -6,3 +6,6 @@
 
 <!-- Test -->
 <jviz-btn id="test" color="pink" text="This is my button"></jviz-btn>
+
+<!-- Button with width -->
+<jviz-btn id="test2" color="teal" text="This is my big button" width="500px"></jviz-btn>
