--- a/demo/btn.html
+++ b/demo/btn.html
@@ -5,7 +5,7 @@
 <link rel="import" href="../jviz-btn.html">
 
 <!-- Test -->
-<jviz-btn id="test" color="pink" text="This is my button"></jviz-btn>
-
-<!-- Button with width -->
+<jviz-btn id="test1" color="pink" text="This is my button"></jviz-btn>
 <jviz-btn id="test2" color="teal" text="This is my big button" width="500px"></jviz-btn>
+<jviz-btn id="test3" color="pink" icon="search"></jviz-btn>
+<jviz-btn id="test4" color="pink" icon="search" text="This is my button"></jviz-btn>
