demo/index.html: test icon-align property

--- a/demo/index.html
+++ b/demo/index.html
@@ -8,4 +8,4 @@
 <jviz-btn id="test1" color="pink" text="This is my button"></jviz-btn>
 <jviz-btn id="test2" color="teal" text="This is my big button" width="500px"></jviz-btn>
 <jviz-btn id="test3" color="pink" icon="search"></jviz-btn>
-<jviz-btn id="test4" color="pink" icon="search" text="This is my button"></jviz-btn>
+<jviz-btn id="test4" color="pink" icon="search" text="This is my button" icon-align="right"></jviz-btn>
